# RayTracer

./: .gitignore  CMakeLists.txt
src/: Image.h  IntegerPacking.h  InterThreadQueue.h  RGBTracer.cpp  RGBTracer.h  RayTracingManager.h  Scene.h  app.cpp
